--- a/01. Photo App/index.html
+++ b/01. Photo App/index.html
@@ -5,21 +5,21 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<meta name="description" content="">
-		<meta name="tessaSAC" content="">
+		<meta name="a simple photo sharing app" content="">
+		<meta name="tessaSAC, Brad Traversy" content="">
 		<link rel="icon" href="../../favicon.ico">
 
-		<title>Starter Template for Bootstrap</title>
+		<title>Photo Sharing App</title>
 
 		<!-- Bootstrap core CSS -->
-		<link href="/css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom styles for this template -->
-		<link href="style.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 
 	<body>
 
-		<nav class="navbar navbar-inverse navbar-fixed-top">
+		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Project name</a>
+					<a class="navbar-brand em-text" href="#">Project name</a>
 				</div>
 				<div id="navbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
@@ -39,6 +39,23 @@
 				</div><!--/.nav-collapse -->
 			</div>
 		</nav>
+
+		<div class="jumbotron">
+			<!-- .container creates responsive fixed-width container to add padding etc. -->
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<h1>Capture <span class="em-text">Life</span></h1>
+						<p>A fun and easy way to capture & share the moments you live for.</p>
+						<a href="#"><img src="img/icon_app_store.png"class="app-btn"></a>
+						<a href="#"><img src="img/icon_app_store" class="app-btn"></a>
+					</div>
+					<div class="col-md-6">
+						
+					</div>
+				</div>
+			</div>
+		</div>
 
     <section>
 
